@@ -23,6 +23,7 @@ User visible changes
     New customizable generic functions
       For class creation:
         ENSURE-CLASS-USING-CLASS, VALIDATE-SUPERCLASS,
+        COMPUTE-DIRECT-SLOT-DEFINITION-INITARGS,
         COMPUTE-CLASS-PRECEDENCE-LIST, COMPUTE-EFFECTIVE-SLOT-DEFINITION,
         COMPUTE-EFFECTIVE-SLOT-DEFINITION-INITARGS, COMPUTE-SLOTS,
         COMPUTE-DEFAULT-INITARGS, READER-METHOD-CLASS, WRITER-METHOD-CLASS.
