@@ -1,3 +1,7 @@
+2004-10-27  Bruno Haible  <bruno@clisp.org>
+
+	* mop.tst: Add test for compute-direct-slot-definition-initargs.
+
 2004-10-31  Bruno Haible  <bruno@clisp.org>
 
 	* socket.tst: New file.
